[package]
name = "hypar"
version = "1.0.3"
edition = "2021"
rust-version = "1.65"
authors = ["Karim Agha <karim.dev@gmail.com>"]
keywords = ["networking", "p2p", "gossip"]
description = "General-purpose infection-style p2p gossiping protocol"
repository = "https://github.com/karim-agha/hypar"
license = "MIT"



[lib]
doctest = false

[dependencies]
tracing = "0.1"
thiserror = "1.0"
futures = "0.3.25"
rmp-serde = "1.1"
rand = "0.8.5"
bimap = "0.6"
metrics = "0.21"
once_cell = "1.16"
parking_lot = "0.12"
asynchronous-codec = "0.6"
multihash = { version = "0.17", features = ["serde-codec"] }
bytes = { version = "1.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.22", features = ["full"] }
unsigned-varint = { version = "0.7", features = ["asynchronous_codec"] }
libp2p = { version = "0.50", default-features = false, features = [
  "serde",
  "yamux",
  "noise",
  "secp256k1",
  "dns",
  "tcp",
  "tokio",
] }
